src/objects/Financials_Verification__c.object
<CustomObject>
    <fields>
        <fullName>DateValue__c</fullName>
        <label>DateValue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financials_Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financials Change Request</label>
        <referenceTo>Financials_Change_Request__c</referenceTo>
        <relationshipLabel>Financials Verifications</relationshipLabel>
        <relationshipName>Financials_Verifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financials__c</fullName>
        <label>Financials</label>
        <referenceTo>Financials__c</referenceTo>
        <relationshipLabel>Financials Verifications</relationshipLabel>
        <relationshipName>Financials_Verifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Request_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TextValue__c</fullName>
        <label>TextValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Financials Verification</label>
    <nameField>
        <displayFormat>FV-{00000}</displayFormat>
        <label>Financials Verification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financials Verifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>